<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  
  <groupId>io.crums</groupId>
  <artifactId>skipledger</artifactId>
  <version>0.0.3-SNAPSHOT</version>
  
  
  <name>SkipLedger</name>
  <description>
    A tamper-proof, append-only ledger with compact, opaque external representation and provable parts.
  </description>


  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.11</maven.compiler.source>
    <maven.compiler.target>1.11</maven.compiler.target>
  </properties>

<build>
    <plugins>

      <!--  Works, but doesn't fit my needs. See comment in appassembler-maven-plugin below.. -->
      
      <!--plugin>
      <artifactId>maven-assembly-plugin</artifactId>
      <version>3.3.0</version>
      <configuration>
        <archive>
          <manifest>
            <mainClass>io.crums.sldg.cli.Jurno</mainClass>
          </manifest>
        </archive>
        <descriptorRefs>
          <descriptorRef>jar-with-dependencies</descriptorRef>
        </descriptorRefs>
      </configuration>
      </plugin-->

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>appassembler-maven-plugin</artifactId>
        <version>2.1.0</version>
        
        <configuration>
        
        <!--
          Note: there must be better ways to do this. I want a single jar file with
          multiple launch scripts
         -->
        
      
        
          <!--platforms>
            <platform>unix</platform>
          </platforms-->
          
          <repositoryLayout>flat</repositoryLayout>
        
          <binFolder>bin</binFolder>
          <repositoryName>lib</repositoryName>
        
          <programs>
            
            <program>
              <mainClass>io.crums.sldg.cli.Sldg</mainClass>
              <id>sldg</id>
            </program>
            
            <program>
              <mainClass>io.crums.sldg.cli.Mrsl</mainClass>
              <id>mrsl</id>
            </program>
            
            <program>
              <mainClass>io.crums.sldg.cli.Jurno</mainClass>
              <id>jurno</id>
            </program>
            
            
          </programs>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.2.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>versions-maven-plugin</artifactId>
        <version>2.5</version>
        <configuration>
          <generateBackupPoms>false</generateBackupPoms>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>3.0.0-M3</version>
        <executions>
          <execution>
            <id>enforce-maven</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <version>[3.0,)</version>
                </requireMavenVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <release>11</release>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.0</version>
        <configuration>
          <argLine>
            --illegal-access=permit
          </argLine>
        </configuration>
      </plugin>
      
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.22.0</version>
        <configuration>
          <argLine>
            --illegal-access=permit
          </argLine>
        </configuration>
      </plugin>


    </plugins>
  </build>



  <dependencies>
    
    <dependency>
      <groupId>io.crums</groupId>
      <artifactId>crums-core</artifactId>
      <version>0.0.3-SNAPSHOT</version>
    </dependency>
    
    
    
    <!-- T E S T    S C O P E  -->
    
  
		<dependency>
		  <groupId>junit</groupId>
		  <artifactId>junit</artifactId>
		  <version>[4.13.1,)</version>
		  <scope>test</scope>
		</dependency>
    
    <dependency>
      <groupId>com.gnahraf</groupId>
      <artifactId>junit-io</artifactId>
      <version>0.0.1</version>
      <scope>test</scope>
    </dependency>
    
    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
      <version>1.4.200</version>
      <scope>test</scope>
    </dependency>
    
    <!-- dependency>
	    <groupId>org.xerial</groupId>
	    <artifactId>sqlite-jdbc</artifactId>
	    <version>3.36.0.2</version>
      <scope>test</scope>
		</dependency -->
		
  </dependencies>







</project>